--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Civilization, Modern -- 20th century'
 - !lcc 'CB'
 - !lcsh 'Education'
+- GITenberg
 title: The Salvaging Of Civilization
 url: http://www.gutenberg.org/ebooks/33889
